CHANGES
=======

2.2 (unreleased)
----------------

- Add commandline option to set config directory.


2.1 (2018-03-06)
----------------

- Switch from urllib2 to requests.

- Make Python-3 compatible.


2.0 (2014-02-22)
----------------

- Switch from spawning curl to using urllib2.

- Package as egg.


1.2 (2013-10-03)
----------------

- Use stdlib xml parser instead of python-xml.


1.1 (2009-05-23)
----------------

- Write messages directly to Maildir instead of using procmail.

- Send messages as multipart, text and html.


1.0 (2007-03-31)
----------------

- First release, inspired by http://newspipe.sourceforge.net/.